[package]
name = "whip"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "WebRTC-HTTP ingestion protocol (WHIP) in Rus"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/whip"
homepage = "https://webrtc.rs"
repository = "https://github.com/ngr-tc/whip"


[dependencies]
